--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Tomoya at ITBC's GitHub Page by itbc</title>
+    <title>Test Very Simple Site on GitHub Pages</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Tomoya at ITBC's GitHub Page</h1>
+        <h1>Test Very Simple Site on GitHub Pages</h1>
         <h2></h2>
         <a href="https://github.com/itbc" class="button"><small>Follow me on</small>GitHub</a>
       </div>
